force-app/main/default/objects/Applications__c/Applications__c.object-meta.xml
<CustomObject>
    <description>Applications for applicant and job requisitions.</description>
    <label>Application</label>
    <nameField>
        <displayFormat>APP{0000}</displayFormat>
        <label>Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>