force-app/main/default/objects/Applications__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please select the applicant for this Application</inlineHelpText>
    <label>Applicant</label>
    <referenceTo>HR_Applicant__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>