force-app/main/default/objects/Applications__c/fields/Application_Source__c.field-meta.xml
<CustomField>
    <fullName>Application_Source__c</fullName>
    <inlineHelpText>Please select the Source for this application</inlineHelpText>
    <label>Application Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
                <default>true</default>
                <label>Web</label>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Internal Search</fullName>
            </value>
            <value>
                <fullName>Job Board</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Inbound Sourcer</fullName>
            </value>
            <value>
                <fullName>Outbound Sourcer</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>