force-app/main/default/objects/Applications__c/fields/Interview_Stage__c.field-meta.xml
<CustomField>
    <fullName>Interview_Stage__c</fullName>
    <inlineHelpText>Please select the interview stage for this application.</inlineHelpText>
    <label>Interview Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Applicant</fullName>
                <default>true</default>
                <label>Applicant</label>
            </value>
            <value>
                <fullName>Interview 1</fullName>
            </value>
            <value>
                <fullName>Interview 2</fullName>
            </value>
            <value>
                <fullName>Interview 3</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Offer Extended</fullName>
            </value>
            <value>
                <fullName>Offer Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>