force-app/main/default/objects/Applications__c/fields/Job_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Job_Requisition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please select the Job Requisition for this application.</inlineHelpText>
    <label>Job Requisition</label>
    <referenceTo>HR_Job_Requisition__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>