force-app/main/default/objects/Applications__c/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <label>Recruiter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>