force-app/main/default/objects/Applications__c/fields/Sourcer__c.field-meta.xml
<CustomField>
    <fullName>Sourcer__c</fullName>
    <label>Sourcer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>